deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-dojo
  labels:
    gateway-access: dojo
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.35
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.35
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.35
